--- a/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.scss
+++ b/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.scss
@@ -92,7 +92,9 @@
 
     .registration {
       button {
-        background: var(--bg);
+        background: var(--bg) !important;
+        border: var(--bg) !important;
+        box-shadow: var(--box-shadow) !important;
       }
     }
 
