--- a/src/app/modules/contests/components/contests-table/contests-table.component.html
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.html
@@ -68,7 +68,7 @@
             <contest-standings-popover [contest]="contest"></contest-standings-popover>
             <br>
             <span *ngIf="currentUser" class="badge mt-1 badge-light-primary badge-glow">
-              {{ contest.solved }} / {{ contest.problemsCount }}
+              {{ contest.solved || 0 }} / {{ contest.problemsCount }}
             </span>
           </div>
         </td>
