--- a/src/app/modules/code-rush/pages/code-rush/code-rush.component.scss
+++ b/src/app/modules/code-rush/pages/code-rush/code-rush.component.scss
@@ -1,28 +1,25 @@
-.bg-results-table {
-  transition: all 0.2s ease;
-  // background-image: linear-gradient(47deg, #1c1368, #9e95f5);
-  opacity: 0.9;
-  border: none;
-  box-shadow: 0 0 10px #9e95f5;
-  border-radius: 10px;
-  
-  th, td {
-    border-top: none;
-    padding-top: 1.15rem;
-    padding-bottom: 1.15rem;
-  }
-}
-
-::ng-deep .dark-layout .bg-results-table {
-  background-image: linear-gradient(47deg, #140d53, #1c1368);
-  box-shadow: 0 0 10px #3226a1;
-
+table {
   th {
-    background-color: inherit !important;
+    border-bottom: none !important;
+    border-top: none !important;
   }
-}
 
-.col.problem-header {
-  padding-right: 0rem !important;
-  padding-left: 0rem !important;
+  tr>td {
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+  }
+
+  tr>th:nth-child(1) {
+    padding-left: 2rem;
+    padding-right: 0.5rem;
+  }
+
+  tr>td:nth-child(1) {
+    padding-left: 2rem;
+    padding-right: 0.5rem;
+  }
+
+  tr>td:nth-child(2) {
+    padding-right: 0.5rem;
+  }
 }
