add new study-plan

--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
@@ -1,5 +1,5 @@
-<a routerLink="/practice/problems/study-plan/{{ studyPlan.id }}">
-  <div class="card bg-gradient-studyplan-{{ studyPlan.id }}">
+<a class="study-plan-{{ studyPlan.id }}" routerLink="/practice/problems/study-plan/{{ studyPlan.id }}">
+  <div class="card">
     <div class="card-header d-block">
       <div class="study-plan-title">
         {{ studyPlan.title }}
