refactoring problems page

--- a/src/app/modules/problems/pages/problems/problems.component.html
+++ b/src/app/modules/problems/pages/problems/problems.component.html
@@ -32,6 +32,8 @@
               [pageSize]="20"
               [maxSize]="5"
               [rotate]="true"
+              [boundaryLinks]="false"
+              [ellipses]="true"
               (pageChange)="_problemsReloader.next()">
             </pagination>
           </div>
