--- a/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
+++ b/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
@@ -19,7 +19,7 @@
     </div>
     
     <div style="position:relative;" *ngIf="achievement.type == 2">
-      <img height="36" src="../../../../../../../assets/images/icons/fire_red.png" alt="streak">
+      <img height="36" src="assets/images/icons/fire_red.png" alt="streak">
 
       <div class="achievement-pill badge badge-pill badge-danger">
         {{ achievement.totalProgress }}
@@ -27,7 +27,7 @@
     </div>
 
     <div *ngIf="achievement.type == 4" class="avatar p-50 bg-warning badge-glow">
-      <img height="36" src="../../../../../../../assets/images/icons/versus.png" alt="vs">
+      <img height="36" src="assets/images/icons/versus.png" alt="vs">
 
       <div class="achievement-pill badge badge-pill badge-warning">
         {{ achievement.totalProgress }}
