--- a/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/@core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -13,7 +13,7 @@
   <ng-template #itemContent>
     <span [data-feather]="item.icon" *ngIf="item.icon"></span>
     <span [translate]="item.translate">{{ item.title }}</span>
-    <span *ngIf="item.hasNewEvent" class="badge mb-50 ml-25 badge-yellow badge-pill badge-glow">New</span>
+    <span *ngIf="item.hasNewEvent" class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>
   </ng-template>
 
   <!-- sub-menu item/collapsible -->
