--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -177,3 +177,21 @@ pre {
 .hljs-ln-code {
   padding-left: 10px;
 }
+
+.tooltip-primary .tooltip-inner {
+  color: #805dca;
+  background-color: #f3effc;
+}
+
+.tooltip-success .tooltip-inner {
+  color: #8ca49f;
+  background-color: #ddf5f0;
+}
+
+.tooltip-primary .arrow:before {
+  border-top-color: #f3effc;
+}
+
+.tooltip-success .arrow:before {
+  border-top-color: #ddf5f0;
+}
