--- a/src/app/modules/contests/components/contest-card/contest-standings-countdown/contest-standings-countdown.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-standings-countdown/contest-standings-countdown.component.html
@@ -13,22 +13,22 @@
     <ng-template #render let-data>
       <div class="d-flex justify-content-between">
         <div class="countdown text-center">
-          <h5 class="clock-val text-primary">{{ data.fragments[0] }}</h5>
+          <h5 class="clock-val">{{ data.fragments[0] }}</h5>
           <h5 class="clock-text">{{ 'DAY' | translate }}</h5>
         </div>
     
         <div class="countdown text-center">
-          <h5 class="clock-val text-primary">{{ data.fragments[1] }}</h5>
+          <h5 class="clock-val">{{ data.fragments[1] }}</h5>
           <h5 class="clock-text">{{ 'HOUR' | translate }}</h5>
         </div>
     
         <div class="countdown text-center">
-          <h5 class="clock-val text-primary">{{ data.fragments[2] }}</h5>
+          <h5 class="clock-val">{{ data.fragments[2] }}</h5>
           <h5 class="clock-text">{{ 'MINUTE' | translate }}</h5>
         </div>
     
         <div class="countdown text-center">
-          <h5 class="clock-val text-primary">{{ data.fragments[3] }}</h5>
+          <h5 class="clock-val">{{ data.fragments[3] }}</h5>
           <h5 class="clock-text">{{ 'SECOND' | translate }}</h5>
         </div>
       </div>    
