--- a/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
+++ b/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
@@ -1,5 +1,5 @@
 <ng-template #popContent>
-  <div class="card">
+  <div class="card contests-colors contest-{{ contests[0].id }} {{ contests[0].title }} contest-type-{{ contests[0].type }}">
     <div class="card-body">
       <h5 class="text-center mt-1 mb-1">
         <i [data-feather]="'contest' | iconName" [size]="20"></i>
