--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper p-0">
+<div class="content-wrapper p-0 contests-colors contests-color contest-{{ contest.id }} {{ contest.title }} contest-type-{{ contest.type }}">
   <div class="content-body">
     <!-- content-header component -->
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
@@ -19,7 +19,7 @@
                 <div class="table-responsive">
                   <table class="table" #table>
                     <thead>
-                      <tr #thead class="bg-gradient-primary">
+                      <tr>
                         <th class="text-center">#</th>
                         <th>{{ 'CONTESTS.CONTESTANT' | translate }}</th>
                         <th class="text-center">
@@ -78,7 +78,7 @@
                         </td>
 
                         <td class="text-center">
-                          <span class="badge badge-glow badge-primary">
+                          <span class="badge points">
                             {{ contestant.points }}
                           </span>
                         </td>
