--- a/src/app/languages.scss
+++ b/src/app/languages.scss
@@ -19,8 +19,8 @@
 
 @include define-badge-lang(
   $name: 'py',
-  $background: linear-gradient(141deg, #3979aa, #ffe974),
-  $box-shadow: 0px 0px 10px #91aa91
+  $background: linear-gradient(271deg, #8CC63F, #007CBA),
+  $box-shadow: 0px 0px 10px #3776AB
 );
 
 @include define-badge-lang(
