--- a/src/app/modules/users/pages/users/users.component.html
+++ b/src/app/modules/users/pages/users/users.component.html
@@ -74,7 +74,8 @@
                       <table-ordering
                         [value]="ordering"
                         [justifyContent]="'start'"
-                        [ordering]="'username'"
+                        [ordering]="'id'"
+                        [reverse]="true"
                         (change)="changeOrdering($event)">
                         <i class="mr-25" data-feather="user"></i>
                         {{ 'User' | translate }}
